# SQLAlchemyExample

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.md  Dockerfile  Dummy.txt  LICENSE  MANIFEST.in  README.rst  RELEASE.md  coverage.xml  docker-compose.yml  docker-rebuild.bat  docker-rebuild.ps1  install.ps1  push.bat  pyproject.toml  release.bat  requirements.txt  requirements_test.txt  setup.cfg
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  bugfix.md  config.yaml  config.yml  enhancement.md  feature.md  hotfix.md
.github/workflows/: 00-pypi-pipeline.yaml  01-check-documentation.yml  01-pre-commit.yml  02-check-documentation.yml  03-ci.yml  build-and-release-to-pypi.yml  check-documentation.yml  check-rst-documentation.yml  ci.yaml  ci.yml  pre-commit.yaml  pre-commit.yml  pypi-pipeline.yaml  release.yml  standard_workflow.yaml
.packageit/: packageit.ini  release.toml
.run/: Python tests for test_delete_table.TestDeleteTable.run.xml  Python tests for test_delete_table.TestDeleteTable.test_parent_assign_data.run.xml  Python tests for test_delete_table.TestDeleteTable.test_parent_assign_data_dup.run.xml  Python tests for test_delete_table.TestDeleteTable.test_parent_table_deletion.run.xml  Python tests for test_delete_table.TestDeleteTable.test_table_creation.run.xml  Python tests for test_delete_table.test_table_creation.run.xml  Python tests for test_one_to_many_bi_single_table_inheritance.TestOTMBiSTI.run.xml  Python tests for test_one_to_many_bi_single_table_inheritance.test_one_to_many_bi_child_no_parent.run.xml  Python tests for test_one_to_many_bi_single_table_inheritance.test_one_to_many_bi_child_no_parent_2.run.xml  Python tests for test_one_to_many_bi_single_table_inheritance.test_one_to_many_bi_child_with_parent.run.xml  Python tests for test_one_to_many_bi_single_table_inheritance.test_one_to_many_bi_parent.run.xml  Python tests for test_one_to_many_bi_single_table_inheritance.test_table_creation.run.xml  Python tests for test_one_to_many_uni_single_table_inheritance.TestOTMUniSTI.run.xml  Python tests for test_one_to_many_uni_single_table_inheritance.TestOTMUniSTI.test_one_to_many_uni_child_with_parent.run.xml  Python tests for test_one_to_many_uni_single_table_inheritance.TestOTMUniSTI.test_table_creation.run.xml  Python tests for test_simple.TestSimpleTable.test_child_table_dunder_repr_ok.run.xml  Python tests for test_simple.TestSimpleTable.test_parent_assign_data.run.xml  Python tests for test_simple.TestSimpleTable.test_parent_table_dunder_str_ok.run.xml  Python tests for tests.test_one_to_many_uni_single_table_inheritance.test_one_to_many_uni_parent.run.xml
docs/: conf.py  index.rst  requirements_docs.txt
docs.1/: conf.py
docs.1/_build/html/: genindex.html  search.html  searchindex.js
docs.1/_build/html/.doctrees/: environment.pickle
docs.1/_build/html/.doctrees/source/: index.doctree
docs.1/_build/html/_sources/source/: conventions.rst.txt
docs.1/_build/html/source/: api.html
docs.1/source/: examples.rst
docs/_build/html/: objects.inv  py-modindex.html
docs/_build/html/.doctrees/: index.doctree
docs/_build/html/_static/: bizstyle.js
docs/_build/html/source/: conventions.html  faq.html
docs/source/: Installation.rst  api.rst  conf.py  conventions.rst  examples.rst  faq.rst  index.rst
requirements/: requirements.txt  requirements_docs.txt
sqlalchemyexample/: SQLAlchemyExample.ini  __init__.py  sqlalchemyexample.py
src/: db.py  db_connection.py  default_tables.py  ex01_00_simple.py  ex02_00_otm_bi_single_table_inherit.py  ex03_00_otm_uni_single_table_inherit.py  ex03_01_otm_uni_single_table_inherit.py  one_to_many_bi.py  one_to_many_bi_single_table_inheritance.py  one_to_many_uni.py  one_to_many_uni_single_table_inheritance.py  otm_bi.py  otm_bi_single_table_inherit.py  otm_bi_sti.py  otm_uni.py  otm_uni_single_table_inherit.py  otm_uni_sti.py  simple.py  simple_tables.py  sti.py
src/directional/: otm_bi.py  otm_uni.py
src/inheritance/: declared_attr.py  mixin.py  mixin.py.isorted  mixin_column.py  mixin_declared_attr.py  mixin_simple.py
src/simple/: simple.py
src/sqlalchemyexample/: SQLAlchemyExample.ini  __init__.py  one_to_many_bi.py  sqlalchemyexample.py
tests/: conftest.py  test_delete_table.py  test_directional.py  test_ex01_simple.py  test_ex02_otm_bi_single_table_inherit.py  test_ex03_otm_uni_single_table_inherit.py  test_inheritance.py  test_one_to_many_bi_single_table_inheritance.py  test_one_to_many_uni.py  test_one_to_many_uni_single_table_inheritance.py  test_otm.py  test_otm_bi_single_table_inherit.py  test_otm_sti.py  test_otm_uni_single_table_inherit.py  test_simple.py  test_sqlalchemyexample.py  test_sti.py
tests/scripts/: grant_privileges.sql
