[build-system]
requires = [ "setuptools", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "SQLAlchemyExample"
authors = [{name = "Hendrik du Toit", email = "hendrik@brightedge.co.za"}]
dynamic = ["version", "description"]

[tool.black]
skip-string-normalization = true
#extend-exclude = '/templates'
line-length = 120
target-version = ['py310']


[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", '-v', '--ignore-glob=*\Archive', '--cov-report=html']
#addopts = ["--import-mode=importlib", '-v', '--cov=./', '--ignore-glob=*\Archive', '--cov-report=html']
pythonpath = ["src", "tests" ]
markers = [
    'select: Run a selection of tests',
    'otmuni: One-To-Manu Uni-direction'
]

[tool.codespell]
#skip = './docs/build/html/*.js'
count = ''
quiet-level = 2
