[metadata]
name = SQLAlchemyExample
version = 0.0.1
author = Hendrik du Toit
author_email = hendrik@brightedge.co.za
description = Insert project description here
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers = 
	Development Status :: 1 - Planning
	Intended Audience :: Developers
	Topic :: Software Development
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3.10

[options]
install_requires =
	Path
	beetools
	sqlalchemy
	sqlalchemy_utils
package_dir =
	=src
packages = find:

[options.packages.find]
where = src

[flake8]
exclude = __init__.py, VersionArchive/, Archive/
max-line-length = 88
select = C,E,F,W,B,B950
extend-ignore = E203, E501

[tool:pytest]
#addopts = --ignore-glob=*\VersionArchive --ignore-glob=*\Archive  --cov-report=html
#addopts = --doctest-modules --cov=tests --cov=packageit --ignore-glob=*\VersionArchive --ignore-glob=*\Archive --ignore-glob=*\Templates --cov-report=html
#addopts = -v --no-summary
#addopts = -v
