[metadata]
name = SQLAlchemyExample
version = 0.1.28
author = Hendrik du Toit
author_email = hendrik@brightedge.co.za
description = Exploring SQLAlchemy
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	Topic :: Software Development
	Topic :: Database
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10

[options]
install_requires =
	Path
	beetools
	sqlalchemy
	sqlalchemy_utils
package_dir =
	=src
packages = find:

[options.packages.find]
where = src

[flake8]
exclude = __init__.py, VersionArchive/, Archive/
max-line-length = 88
select = C,E,F,W,B,B950
extend-ignore = E203, E501, W503
